<resources>
    <string name="app_name">TMDB</string>
    <string name="guest">Guest</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="review">Review</string>
    <string name="see_all_review">See All Review</string>
</resources>