<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.content.ContentDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_home"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/AppText.Title.White" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_content"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_vote_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_rating"
                android:elegantTextHeight="true"
                android:padding="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/AppText.Title.White"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_content"
                tools:text="6.9" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:tint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@id/tv_vote_average"
                app:layout_constraintEnd_toStartOf="@id/img_dislike"
                app:layout_constraintTop_toTopOf="@id/tv_vote_average"
                app:srcCompat="@drawable/ic_like" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:tint="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@id/tv_vote_average"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_vote_average"
                app:srcCompat="@drawable/ic_dislike" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_voting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_vote_average,img_like,img_dislike" />

            <View
                android:id="@+id/view_line_voting"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_voting" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/overview"
                android:textAppearance="@style/AppText.Title.Black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line_voting" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/AppText.Body.Black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
                tools:text="@string/app_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/release_date"
                android:textAppearance="@style/AppText.Title.Black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/AppText.Body.Black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date_title"
                tools:text="@string/app_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_review_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/review"
                android:textAppearance="@style/AppText.Title.Black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/bg_edit_text"
                android:gravity="top"
                android:minHeight="128dp"
                android:padding="8dp"
                android:textAppearance="@style/AppText.Body.Black"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_review_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/see_all_review"
                android:textAppearance="@style/AppText.Body.Black"
                app:layout_constraintEnd_toEndOf="@id/edt_review"
                app:layout_constraintTop_toBottomOf="@id/edt_review" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>